--- a/variables.yaml
+++ b/variables.yaml
@@ -10,6 +10,7 @@ provision_net:
   dhcp_start: 192.168.201.140
   dhcp_end: 192.168.201.160
   bridge_prov_ip: 192.168.201.1
+  mtu: 3400
 baremetal_net:
   net: 192.168.203.0
   netmask: 255.255.255.0
@@ -19,7 +20,7 @@ baremetal_net:
   ntp: "103.16.182.23,103.16.182.214"
   dhcp_start: 192.168.203.90
   dhcp_end: 192.168.203.110
-  mtu: 1500
+  mtu: 3400
 vip:
   api: 192.168.203.80
   apiint: 192.168.203.80
@@ -52,6 +53,11 @@ kvmhost:
   enable_portfw: True
   replace_ssh_key: True
   replace_ddns_duckdns: False
+  provisioning_bridge_create: True
+  provisioning_bridge_isolated: True
+  baremetal_bridge_create: True
+  baremetal_bridge_isolated: True
+  baremetal_bridge_vlan: 2003
 cluster_name: ocp-lab
 base_domain: example.com
 domain: "{{ cluster_name }}.{{ base_domain }}"
