--- a/variables.yaml
+++ b/variables.yaml
@@ -10,7 +10,7 @@ provision_net:
   dhcp_start: 192.168.201.140
   dhcp_end: 192.168.201.160
   bridge_prov_ip: 192.168.201.1
-  mtu: 3400
+  mtu: 1500
 baremetal_net:
   net: 192.168.203.0
   netmask: 255.255.255.0
@@ -20,7 +20,8 @@ baremetal_net:
   ntp: "103.16.182.23,103.16.182.214"
   dhcp_start: 192.168.203.90
   dhcp_end: 192.168.203.110
-  mtu: 3400
+  mtu: 1500
+  vlan: 2003
 vip:
   api: 192.168.203.80
   apiint: 192.168.203.80
@@ -57,7 +58,6 @@ kvmhost:
   provisioning_bridge_isolated: True
   baremetal_bridge_create: True
   baremetal_bridge_isolated: True
-  baremetal_bridge_vlan: 2003
 cluster_name: ocp-lab
 base_domain: example.com
 domain: "{{ cluster_name }}.{{ base_domain }}"
@@ -67,6 +67,7 @@ enable_letsencrypt: False
 image_dir: /var/lib/libvirt/images
 image_dir_bastion: /var/lib/libvirt/imagesssd
 image: rhel-8.6-x86_64-kvm.qcow2
-image_location: http://192.168.1.70/images/rhel-8.6-x86_64-kvm.qcow2
+image_location: /root/images/rhel-8.6-x86_64-kvm.qcow2
+pull_secret_file: pull-secret.txt
 supported_os: rhel8
 ocpversion: stable-4.11
