fix final message on prepare-hypervisor.yaml

--- a/prepare-hypervisor.yaml
+++ b/prepare-hypervisor.yaml
@@ -671,15 +671,15 @@
         - "#                                                                                   #"
         - "# scp <rhel8image.qcow2> <yourhypervisor>:/root/images/                             #"
         - "# cd /root/ocp4-in-the-jars                                                         #"
-        - "# ansible-playbook --ask-vault-pass main.yml                                        #"
+        - '# ansible-playbook --extra-vars "@custom-variables.yaml" main.yaml                #'
         - "#                                                                                   #"
         - "# if you want to use OpenShift API and/or console outside your Hypervisor,          #"
         - "# for example from your Linux box, add the following lines to your /etc/hosts file: #"
         - "#                                                                                   #"
-        - "# {{ ansible_default_ipv4.address }} api.{{ domain }}                                           #"
-        - "# {{ ansible_default_ipv4.address }} oauth-openshift.apps.{{ domain }}                          #"
-        - "# {{ ansible_default_ipv4.address }} console-openshift-console.apps.{{ domain }}                #"
-        - "# {{ ansible_default_ipv4.address }} noobaa-mgmt-openshift-storage.apps.{{ domain }}            #"
+        - "# {{ ansible_default_ipv4.address }} api.{{ domain }}                                              #"
+        - "# {{ ansible_default_ipv4.address }} oauth-openshift.apps.{{ domain }}                             #"
+        - "# {{ ansible_default_ipv4.address }} console-openshift-console.apps.{{ domain }}                   #"
+        - "# {{ ansible_default_ipv4.address }} noobaa-mgmt-openshift-storage.apps.{{ domain }}               #"
         - "#                                                                                   #"
         - "#####################################################################################"
     when:
