--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ hosts-bastion*
 hosts-kvmhost*
 *.ORIG
 appunti*
-custom-variables.yaml
+custom-variables.yaml*
 pull-secret.txt
 custom-bm-ansible-nodes.json
 *id_rsa
