create master and worker VMs for redfish implementation

--- a/create-masters.yaml
+++ b/create-masters.yaml
@@ -31,13 +31,25 @@
     run_once: True
     with_items: "{{ master_nodes }}"
 
-  - name: Defining the Overcloud masters
+  - name: Defining master VMs - virtualbmc
     shell: |
       virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_prov }},mac={{ item.provisioning_mac }} --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
       virsh define /tmp/{{ item.name }}.xml
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
     with_items: "{{ master_nodes }}"
+    when:
+      - not redfish.enable|bool
+
+   - name: Defining master VMs - redfish
+    shell: |
+      virt-install --ram {{ master.memory }} --vcpus {{ master.cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_bm }},mac={{ item.baremetal_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
+      virsh define /tmp/{{ item.name }}.xml
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    with_items: "{{ master_nodes }}"
+    when:
+      - redfish.enable|bool
   
   # TODO: check ip address available in the hypervisor
   - name: Create virtualbmc interface
@@ -47,4 +59,6 @@
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
     with_items: "{{ master_nodes }}"
+    when:
+      - not redfish.enable|bool
 
