--- a/variables.yaml
+++ b/variables.yaml
@@ -2,6 +2,13 @@ bridge_prov: br0
 bridge_bm: br-2003
 libguestfs_path: /usr/share/guestfs/appliance/
 dns_ip_utility: 1.1.1.1
+redfish:
+  enable: True
+  config_file: /etc/sushy-emulator/sushy-emulator.conf
+  listen_port: 8000
+  # set to all to listen on all IPs, instead set default to listen on default ip
+  listen_ip: all
+  auth_file: /etc/sushy-emulator/auth_file
 provision_net:
   net: 192.168.201.0
   netmask: 255.255.255.0
