--- a/configure-bastion.yaml
+++ b/configure-bastion.yaml
@@ -153,7 +153,7 @@
 
   - name: Execute baremetal-net.sh
     shell: |
-      nohup /root/baremetal-net.sh
+      nohup /root/baremetal-net.sh &
     become: True
 
   - name: Create provisioning-net.sh
