adapt scaledown for redfish network topology

--- a/scaledown-bastion.yaml
+++ b/scaledown-bastion.yaml
@@ -87,13 +87,25 @@
       - "{{ bastion_nodes }}"
     ignore_errors: True
 
-  - name: Re-Defining the bastion vm
+  - name: Re-Defining the bastion vm - virtualbmc
     shell: |
       virt-install --ram {{ bastion.post_memory }} --vcpus {{ bastion.post_cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/bastion.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_prov }} --network bridge:{{ bridge_bm }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
       virsh define /tmp/{{ item.name }}.xml
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
     with_items: "{{ bastion_nodes }}"
+    when:
+      - not redfish.enable|bool
+
+  - name: Re-Defining the bastion vm - redfish
+    shell: |
+      virt-install --ram {{ bastion.post_memory }} --vcpus {{ bastion.post_cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/bastion.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_bm }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
+      virsh define /tmp/{{ item.name }}.xml
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    with_items: "{{ bastion_nodes }}"
+    when:
+      - redfish.enable|bool
 
   - name: Start virsh domain
     virt:
@@ -110,7 +122,7 @@
   - name: Sleeping till ssh on bastion vm is up
     wait_for:
       port: 22
-      host: "{{ item.provisioning_ip }}"
+      host: "{{ item.baremetal_ip }}"
       delay: 20
       timeout: 300
     delegate_to: "{{ item.hypervisor_name }}"
