--- a/scaledown-bastion.yaml
+++ b/scaledown-bastion.yaml
@@ -119,7 +119,19 @@
       - "{{ bastion_nodes }}"
     ignore_errors: True
 
-  - name: Sleeping till ssh on bastion vm is up
+  - name: Sleeping till ssh on bastion vm is up - virtualbmc
+    wait_for:
+      port: 22
+      host: "{{ item.provisioning_ip }}"
+      delay: 20
+      timeout: 300
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    with_items: "{{ bastion_nodes }}"
+    when:
+      - not redfish.enable|bool
+
+  - name: Sleeping till ssh on bastion vm is up - redfish
     wait_for:
       port: 22
       host: "{{ item.baremetal_ip }}"
@@ -128,4 +140,6 @@
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
     with_items: "{{ bastion_nodes }}"
+    when:
+      - redfish.enable|bool
 
